# egrok

./: Cargo.toml  README.md
egrok-client/: Cargo.toml
egrok-client/src/: main.rs
egrok-daemon/: Cargo.toml
egrok-daemon/src/: main.rs  prelude.rs  utils.rs
egrok-lib/: Cargo.toml
egrok-lib/src/: lib.rs
