[package]
name = "egrok" 
version = "0.1.0"
edition = "2021"

[dependencies]
egrok_lib = { path = "../egrok-lib" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
isahc = { version="1.7.2", features=["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1"
# Add other dependencies here
