[package]
name = "egrok_daemon" 
version = "0.1.0"
edition = "2021"

[dependencies]
egrok_lib = { path = "../egrok-lib" }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
isahc = { version="1.7.2", features=["json"] } 
serde_json = "1.0.111"
clap = { version = "4.4.18", features = ["derive"] }
form_urlencoded = "1.2.1"

[dev-dependencies]
anyhow = "1"
# Add other dependencies here
