[package]
name = "egrok_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
aes-gcm = "0.10.3"
rand = "0.8.4"
scrypt = { version = "0.11.0", default-features = true }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
